force-app/main/default/objects/PresaleReservierung__c/PresaleReservierung__c.object-meta.xml
<CustomObject>
    <label>Vorab-Reservierung</label>
    <nameField>
        <label>PresaleReservierung-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vorab-Reservierungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>