force-app/main/default/objects/PresaleReservierung__c/fields/Kontakt__c.field-meta.xml
<CustomField>
    <fullName>Kontakt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vorab-Reservierungen</relationshipLabel>
    <relationshipName>Vorab_Reservierungen</relationshipName>
    <type>Lookup</type>
</CustomField>