force-app/main/default/objects/PresaleReservierung__c/fields/Makler__c.field-meta.xml
<CustomField>
    <fullName>Makler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Makler</label>
    <referenceTo>Realty_User__c</referenceTo>
    <relationshipLabel>Vorab-Reservierungen</relationshipLabel>
    <relationshipName>Vorab_Reservierungen</relationshipName>
    <type>Lookup</type>
</CustomField>