force-app/main/default/objects/PresaleReservierung__c/fields/PresaleTeilobjekt__c.field-meta.xml
<CustomField>
    <fullName>PresaleTeilobjekt__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Presale-Appartment</label>
    <referenceTo>PresaleApartment__c</referenceTo>
    <relationshipLabel>Vorab-Reservierungen</relationshipLabel>
    <relationshipName>Vorab_Reservierungen</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>