force-app/main/default/objects/PresaleReservierung__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Vorab-Reservierungen</relationshipLabel>
    <relationshipName>Vorab_Reservierungen</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>