force-app/main/default/objects/PresaleReservierung__c/fields/Vorheriger_Kaufpreis__c.field-meta.xml
<CustomField>
    <fullName>Vorheriger_Kaufpreis__c</fullName>
    <description>Der Kaufpreis, der zum Zeitpunkt der Reservierung diesem Benutzer im Maklerportal ausgegeben wurde.</description>
    <inlineHelpText>Der Kaufpreis, der zum Zeitpunkt der Reservierung diesem Benutzer im Maklerportal ausgegeben wurde.</inlineHelpText>
    <label>Vorheriger Kaufpreis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>