force-app/main/default/objects/PresaleReservierung__c/fields/Zusatzinfo__c.field-meta.xml
<CustomField>
    <fullName>Zusatzinfo__c</fullName>
    <label>Zusatzinfo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>